src/main/java/org/example/profiruparser/errors/UserAlreadyExistsException.java
package org.example.profiruparser.errors;

public class UserAlreadyExistsException extends RuntimeException {
    public UserAlreadyExistsException(String message) {
        super(message);
    }
}